--- a/app/globals.css
+++ b/app/globals.css
@@ -24,3 +24,16 @@
   border: 2px solid #ff5a3c;
   border-radius: 5px;
 }
+nav {
+  border: 2px solid;
+  border-radius: 5px;
+}
+.selection-border {
+  border: 2px solid;
+  border-radius: 5px;
+  opacity: 0.5;
+}
+.perfect-border {
+  border: 0px solid;
+  border-radius: 5px;
+}
